-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.4.0 Beta1, 6.5.0
-
None
-
Code Type: ARM-64 (Native)
OS Version: macOS 12.4 (21F79)
Model: MacBookPro18,1, BootROM 7459.121.3, proc 10:8:2 processors, 16 GB, SMC
Graphics: Apple M1 Pro, Apple M1 Pro, Built-In
$ qml --version
qt.qml.import: addImportPath: "/Users/jwb/Qt/6.4.0/macos/qml"
qt.qml.import: addImportPath: "qrc:/qt-project.org/imports"
qt.qml.import: addImportPath: "/Users/jwb/Qt/6.4.0/macos/bin"
qt.qml.import: addImportPath: "/Users/jwb/Qt/6.4.0/macos/bin/qml"
Qml Runtime 6.4.0
Code Type: ARM-64 (Native) OS Version: macOS 12.4 (21F79) Model: MacBookPro18,1, BootROM 7459.121.3, proc 10:8:2 processors, 16 GB, SMC Graphics: Apple M1 Pro, Apple M1 Pro, Built-In $ qml --version qt.qml.import: addImportPath: "/Users/jwb/Qt/6.4.0/macos/qml" qt.qml.import: addImportPath: "qrc:/qt-project.org/imports" qt.qml.import: addImportPath: "/Users/jwb/Qt/6.4.0/macos/bin" qt.qml.import: addImportPath: "/Users/jwb/Qt/6.4.0/macos/bin/qml" Qml Runtime 6.4.0
-
-
b60c00f4a (dev), 2180ce890 (6.7), 6ba530da2 (6.6), 913f49b81 (6.5)
The attached qml file run from the command line using the qml tool results in a segfault if the PdfPageImage type is used to load the file but not when Image is used to load the file.
See attached: pdfpageimage.qml
In the file: Qt/6.4.0/Src/qtwebengine/src/pdfquick/PdfPageView.qml, it states "In case you want to make changes in your own version of this component, you can copy the QML, which is installed into the QtQuick/Pdf/qml module directory, and modify it as needed.", so I am assuming PdfPageImage, which is used in that file, is intended for general use although it is not appearing in the DevSnap documentation.
- resulted from
-
QTBUG-77506 develop PDF rendering strategy for Qt Quick
-
- Closed
-
| For Gerrit Dashboard: QTBUG-104767 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 528360,4 | QQuickPdfPageImage::load(): fall back to base class impl to avoid crash | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 528548,2 | QQuickPdfPageImage::load(): fall back to base class impl to avoid crash | 6.7 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 528631,2 | QQuickPdfPageImage::load(): fall back to base class impl to avoid crash | 6.6 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 528647,2 | QQuickPdfPageImage::load(): fall back to base class impl to avoid crash | 6.5 | qt/qtwebengine | Status: MERGED | +2 | 0 |